starting divide and conquer of older generations of code

--- a/applications/aero/app_miniac copy.ipynb
+++ b/applications/aero/app_miniac copy.ipynb
@@ -17,18 +17,12 @@
    "source": [
     "from modeling.compute import Par, Var\n",
     "from modeling.execution import Component\n",
-    "from foundations.functionalsets import ResidualSet\n",
-    "from foundations.functionalsets import EliminationSet\n",
-    "from foundations.functionalsets import EliminationKeepSet\n",
-    "from foundations.functionalsets import Functional\n",
-    "from foundations.functionalsets import DefaultResidualSolver\n",
-    "from foundations.functionalsets import FeedForwardSolver\n",
     "from foundations.functionalsets import FunctionalComp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "49056730",
    "metadata": {
     "execution": {
@@ -60,13 +54,13 @@
     "    arg_mapping=True))\n",
     "\n",
     "StructSet = F1.projectable.merge(F2.projectable)#etc...\n",
-    "Struct = StructSet.project((A,V,S))\n",
+    "Struct = StructSet.project((A,V,S, W0, N, t, rhoS))\n",
     "#Struct.solver = FeedForwardSolver([F1, F2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "a9150ac7",
    "metadata": {},
    "outputs": [],
@@ -77,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "3475b4e6",
    "metadata": {},
    "outputs": [
@@ -88,7 +82,7 @@
        " {W: DeviceArray(4941.01, dtype=float64)})"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "440d013a",
    "metadata": {},
    "outputs": [],
@@ -109,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "ee475a94",
    "metadata": {},
    "outputs": [
@@ -119,7 +113,7 @@
        "{A: 1.01, V: 1.01, S: 1.01, W0: 4940, N: 2.5, t: 0.12, rhoS: 45.42}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "d3e6bc37",
    "metadata": {},
    "outputs": [],
@@ -140,25 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "d745f22c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({W: 4995.069245788502, W_w: 55.069245788501966},\n",
+       "({W: 4995.069245788575, W_w: 55.06924578857531},\n",
        " {W_w: DeviceArray(55.06924579, dtype=float64)},\n",
        " {W: DeviceArray(4995.06924579, dtype=float64)})"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z3,F1.solve({**y1, **z3}),F2.solve({**y2, **z3})"
+    "z3, F1.solve({**y1, **z3}),F2.solve({**y2, **z3})"
    ]
   }
  ],
@@ -178,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
