--- a/minimdo/engine/test_restructure.ipynb
+++ b/minimdo/engine/test_restructure.ipynb
@@ -53,10 +53,10 @@
     "    alpha*Pt*D**2*eta_t/(16*S**2)*1/(8e6) == R,\n",
     "    R == 1\n",
     "]\n",
-    "newmodel = presolve_merge(model, [1,2], [3,4], [5]) #groups statevars; transforms a_i\n",
-    "newmodel = presolve(newmodel, eliminate=[1,4,5]) # eliminate state vars that are not shared; there might be a shared var for 2 and 3, so we don't eliminate these\n",
+    "newmodel = presolve_merge(model, [1,2], [3,4], [5]) #groups statevars; transforms a_i; only makes sense when no feedforward in groups?\n",
+    "newmodel = presolve(newmodel, eliminate=[1,4,5]) # eliminate transformed equations; eliminate state vars that are not shared; there might be a shared var for 2 and 3, so we don't eliminate these\n",
     "newmodel = presolve_merge(model, [2, 3]) # groups shared vars, \"MDF\"\n",
-    "newmodel.solve() # this becomes and MDF solve"
+    "newmodel.solve() # this becomes the MDF solve"
    ]
   },
   {
