--- a/applications/examples/allisonintro.ipynb
+++ b/applications/examples/allisonintro.ipynb
@@ -1,36 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e10f3968",
+   "metadata": {},
+   "source": [
+    "## New library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f1cef92",
+   "id": "4bdedebc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.couplingapi import Subproblem, intersection\n",
-    "from modeling.couplingapi import problem, get_vals\n",
-    "from modeling.api import Var\n",
-    "import openmdao.api as om\n",
-    "import matplotlib.pyplot as plt\n",
+    "from engine.torchengine import AnalyticalSetSympy, FunctionSympy, ParallelResiduals, EliminateAnalysis, get_analysis_structure, EliminateAnalysisMergeResiduals\n",
+    "from engine.torchdata import symbols, sp, generate_optim_functions, print_formatted_table\n",
+    "from scipy.optimize import minimize\n",
     "import numpy as np\n",
-    "import sympy as sp\n",
-    "from collections import OrderedDict"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c5bf652-8329-4d3c-873d-bafb1cca5a60",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-07T02:54:19.707313Z",
-     "iopub.status.busy": "2022-07-07T02:54:19.707313Z",
-     "iopub.status.idle": "2022-07-07T02:54:19.722580Z",
-     "shell.execute_reply": "2022-07-07T02:54:19.722580Z",
-     "shell.execute_reply.started": "2022-07-07T02:54:19.707313Z"
-    },
-    "tags": []
-   },
+   "id": "bc1663d1",
+   "metadata": {},
    "outputs": [],
    "source": [
     "b = [2, 2.5, 3]\n",
@@ -39,85 +35,416 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ea38147",
+   "metadata": {},
+   "source": [
+    "### Formulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6cc932a6-7b12-4122-9e5e-ffdf38d8b01e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-07T02:54:20.120105Z",
-     "iopub.status.busy": "2022-07-07T02:54:20.120105Z",
-     "iopub.status.idle": "2022-07-07T02:54:20.136781Z",
-     "shell.execute_reply": "2022-07-07T02:54:20.135766Z",
-     "shell.execute_reply.started": "2022-07-07T02:54:20.120105Z"
-    },
-    "tags": []
-   },
+   "id": "003a25a6",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "x1, x2, x3 = Var('x_1'), Var('x_2'), Var('x_3')\n",
-    "y2, y3 = Var('y_2'), Var('y_3')\n",
+    "x1, x2, x3, y1, y2, y3, indices = symbols('x1, x2, x3, y1, y2, y3')\n",
+    "idxrev = {var.item():key for key,var in indices.items()}\n",
+    "sets = {\n",
+    "    0: AnalyticalSetSympy(0.1*x1*y2+0.8*x1*y3+b[0], y1, indices),\n",
+    "    1: AnalyticalSetSympy(x2*y3+b[1], y2, indices),\n",
+    "    2: AnalyticalSetSympy(0.1*x3*y1+0.8*x3*y2+b[2], y3, indices),\n",
+    "}\n",
+    "objective = FunctionSympy((y1-y1e)**2+sp.Matrix([x1**2,x2**2,x3**2]).dot(w**2), indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d43d92c9",
+   "metadata": {},
+   "source": [
+    "### Problem functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "68d1db15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IDF = ParallelResiduals([s.analysis for s in sets.values()], [objective])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9d174c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order = [0,1,2]\n",
+    "structure_in, structure_out, full_structure = get_analysis_structure(\n",
+    "    [sets[idx].analysis.structure_full for idx in order])\n",
+    "feedback = {int(elt) for elt in structure_in}.intersection({int(elt) for elt in structure_out})\n",
+    "A = [elt for elt in order if len({elt.item() for elt in sets[elt].analysis.structure[1]\n",
+    "                                  }.intersection(feedback)) == 0]\n",
+    "B = [elt for elt in order if elt not in A]\n",
+    "R = EliminateAnalysisMergeResiduals(functions=[sets[idx].residual for idx in B])\n",
+    "MDFelim = EliminateAnalysis([sets[idx].analysis for idx in A], [objective, R])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4fd4cd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{y2, y3}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{idxrev[elt] for elt in feedback}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a925c3cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0], [1, 2])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A,B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69d40fbd",
+   "metadata": {},
+   "source": [
+    "### Optimization functions processed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e364449c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = torch.ones(len(indices), dtype=torch.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e31662c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = IDF\n",
+    "optim_indices = prob.structure[0]\n",
+    "xguess, obj_function, ineq_function, eq_function, dobj, dineq, deq, _ = generate_optim_functions(prob,\n",
+    "    optim_indices, x0, inequality_direction='positive-null', objective=0, residuals=1)\n",
+    "eqlen = len(eq_function(xguess))\n",
+    "constraints = [{'type': 'eq', 'fun': eq_function, 'jac': deq}] if eqlen >= 1 else []\n",
+    "bnds_problem = [(None, None) for elt in optim_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c78d98cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12.669999999999998, tensor([1.9000, 2.5000, 2.9000], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_function(xguess), eq_function(xguess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c59ffc5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solve the optimization problem\n",
+    "xsol = minimize(obj_function, xguess, bounds=bnds_problem, jac=dobj, \n",
+    "                constraints=constraints, options={'maxiter': 500}, method='SLSQP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c9f65e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " message: Optimization terminated successfully\n",
+       " success: True\n",
+       "  status: 0\n",
+       "     fun: 0.5698273402144947\n",
+       "       x: [-5.071e-01  4.750e-02  1.789e-01  2.661e+00  3.390e+00\n",
+       "            4.900e-01]\n",
+       "     nit: 10\n",
+       "     jac: [ 1.131e-02  2.138e-01  5.167e-01 -2.937e-02 -2.349e-01\n",
+       "            0.000e+00]\n",
+       "    nfev: 12\n",
+       "    njev: 10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xsol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c4fa4f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1     x2    x3    y1   y2    y3  \n",
+      "-0.507 0.047 0.179 0.49 2.661 3.39\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_formatted_table([x0], indices, idxrev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "972af33f",
+   "metadata": {},
+   "source": [
+    "## Old library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d8382f01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modeling.api import Var\n",
+    "from modeling.couplingapi import Subproblem, intersection, problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "defb5ef9",
+   "metadata": {},
+   "source": [
+    "### Formulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4c00bb9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1, x2, x3, y2, y3  = Var('x_1'), Var('x_2'), Var('x_3'), Var('y_2'), Var('y_3')\n",
     "a1 = Subproblem()\n",
     "y1 = a1.Var('y_1', 0.1*x1*y2+0.8*x1*y3+b[0])\n",
     "a2 = Subproblem()\n",
     "a2.add_equation(y2, x2*y3+b[1])\n",
     "a3 = Subproblem()\n",
     "a3.add_equation(y3, 0.1*x3*y1+0.8*x3*y2+b[2])\n",
-    "objective = (y1-y1e)**2+sp.Matrix([x1**2,x2**2,x3**2]).dot(w**2)\n",
-    "discipline_set = [a1, a2, a3]\n",
-    "merged_discipline = intersection(*discipline_set, mergesets=False)\n",
+    "objective = (y1-y1e)**2+sp.Matrix([x1**2,x2**2,x3**2]).dot(w**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b12fc1d",
+   "metadata": {},
+   "source": [
+    "### Problem functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "14eae221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_discipline = intersection(a1, a2, a3, mergesets=True)\n",
     "P = problem(objective, [], [merged_discipline], counter=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "38b7b93d-de89-481f-a210-0f197f0892cf",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-10T19:09:55.682485Z",
-     "iopub.status.busy": "2022-05-10T19:09:55.681986Z",
-     "iopub.status.idle": "2022-05-10T19:09:55.694672Z",
-     "shell.execute_reply": "2022-05-10T19:09:55.694485Z",
-     "shell.execute_reply.started": "2022-05-10T19:09:55.682485Z"
-    },
-    "tags": []
-   },
+   "execution_count": 26,
+   "id": "dfaf88f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([(0, 3), (1, 3), (2, 3)])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_discipline.Ftree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "981ba317",
+   "metadata": {},
+   "source": [
+    "### Problem structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "12933363",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def reorder(tree, order):\n",
+    "from modeling.execution import edges_from_components\n",
+    "from collections import OrderedDict\n",
+    "def reorder(Ftree, order):\n",
     "    d = OrderedDict()\n",
-    "    Ftree = tree[0]\n",
     "    for elt in order:\n",
     "        d[elt] = Ftree[elt]\n",
     "    for key,var in Ftree.items():\n",
     "        if key not in d:\n",
     "            d[key]=var\n",
-    "    return d, tree[1], tree[2]"
+    "    return d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "86519036",
+   "execution_count": 18,
+   "id": "b33e928c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "order = [3,1,2]"
+    "edges = edges_from_components(P.components)\n",
+    "order = [3,1,2]\n",
+    "tree = reorder(P.Ftree,order), P.Stree, {'x_1': 1, 'x_2':1, 'x_3': 1}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "id": "dc553067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(({1: ('y_3', 'y_2', 'x_1'),\n",
+       "   2: ('x_2', 'y_3'),\n",
+       "   3: ('y_1', 'x_3', 'y_2'),\n",
+       "   4: ('y_1', 'x_3', 'x_2', 'x_1')},\n",
+       "  {1: ('y_1',), 2: ('y_2',), 3: ('y_3',), 4: (None,)},\n",
+       "  {}),\n",
+       " (OrderedDict([(3, 2), (1, 0), (2, 1), (4, 4)]),\n",
+       "  {3: 4, 0: 3, 1: 3, 2: 3},\n",
+       "  {'x_1': 1, 'x_2': 1, 'x_3': 1}))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges, tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e885f25",
+   "metadata": {},
+   "source": [
+    "### Optimizer functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "5f1cef92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modeling.couplingapi import get_vals\n",
+    "from solver.runpipeline import run_valid_formulation\n",
+    "from graph.graphutils import VAR, COMP, SOLVER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "ecd9a93d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m solver_options \u001b[38;5;241m=\u001b[39m P\u001b[38;5;241m.\u001b[39msolver_options\n\u001b[1;32m----> 2\u001b[0m \u001b[43msolver_options\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mupdate({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moptimizer\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mL-BFGS-B\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmaxiter\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m75\u001b[39m})\n\u001b[0;32m      3\u001b[0m solver_options[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msolver\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGS\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmaxiter\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;241m20\u001b[39m}\n\u001b[0;32m      4\u001b[0m comp_options \u001b[38;5;241m=\u001b[39m P\u001b[38;5;241m.\u001b[39mcomp_options\n",
+      "\u001b[1;31mKeyError\u001b[0m: 1"
+     ]
+    }
+   ],
    "source": [
-    "from modeling.execution import edges_from_components\n",
-    "from solver.runpipeline import run_valid_formulation\n",
-    "from graph.graphutils import VAR, COMP, SOLVER\n",
-    "edges = edges_from_components(P.components)\n",
-    "tree = P.Ftree, P.Stree, {'x_1': 1, 'x_2':1, 'x_3': 1}\n",
-    "tree = reorder(tree, order)\n",
     "solver_options = P.solver_options\n",
     "solver_options[1].update({'optimizer': 'L-BFGS-B', 'maxiter': 75})\n",
     "solver_options[2] = {'solver': 'GS', 'maxiter':20}\n",
@@ -360,6 +687,14 @@
     "prob.cleanup();\n",
     "cr = om.CaseReader(\"cases.sqlite\")\n",
     "solver_cases = cr.list_cases(out_stream=None);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9cf3b1e",
+   "metadata": {},
+   "source": [
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
