partitioning code by generation, fixing old code

--- a/applications/gen4/test.ipynb
+++ b/applications/gen4/test.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.couplingapi import Subproblem\n",
-    "from modeling.api import Var\n",
     "import openmdao.api as om\n",
-    "from modeling.ipoptsolver import setup_ipopt\n",
+    "import jax.numpy as anp\n",
     "import numpy as np\n",
-    "import jax.numpy as anp"
+    "from modeling.gen4.couplingapi import Subproblem\n",
+    "from modeling.gen4.ipoptsolver import setup_ipopt\n",
+    "from modeling.compute import Var"
    ]
   },
   {
@@ -24,35 +24,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2., -1., -1.,  1.], dtype=float32)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "P1 = Subproblem()\n",
-    "x3 = Var('x_3')\n",
-    "a = Var('a')\n",
+    "x3, a = Var('x_3'), Var('a')\n",
     "x1 = P1.add_equation('x_1', x3**2-a)\n",
     "x2 = P1.add_equation('x_2', x1*x3)\n",
     "P1.add_equation(x3, x1*x2)\n",
     "P1.variable_order = ['a','x_1','x_2','x_3']\n",
     "y = np.array([2, -1, -1, 1], dtype=np.float32)\n",
-    "P1.solve(y)"
+    "#P1.solve_with_ipopt(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[x_1, x_2, x_3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P1.independent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +82,7 @@
        "[x_3, x_1, x_2]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DeviceArray([0., 0., 0.], dtype=float32)"
+       "DeviceArray([2., 0., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,18 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DeviceArray([[-2.,  0.,  1.],\n",
-       "             [ 1.,  1., -1.],\n",
-       "             [ 1.,  1.,  1.]], dtype=float32)"
+       "DeviceArray([[ 1.,  2.,  0.],\n",
+       "             [ 1., -1.,  1.],\n",
+       "             [ 1.,  1., -1.]], dtype=float32)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,8 +159,7 @@
    ],
    "source": [
     "P1 = Subproblem()\n",
-    "x3 = Var('x_3')\n",
-    "a = Var('a')\n",
+    "x3, a = Var('x_3'), Var('a')\n",
     "x1 = P1.add_equation('x_1', x3**2-a)\n",
     "x2 = P1.add_equation('x_2', x1*x3)\n",
     "P1.variable_order = ['a','x_1','x_2','x_3']\n",
@@ -802,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
