--- a/minimdo/foundations/derivatives.ipynb
+++ b/minimdo/foundations/derivatives.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from foundations.projectables import ResidualProjectable\n",
-    "from modeling.compute import create_vars, var_encoding\n",
+    "from modeling.gen4.arghandling import var_encoding\n",
+    "from modeling.compute import create_vars\n",
     "from foundations.functionals import encode_sympy\n",
     "from foundations.functional_noobj import concatenate_residuals\n",
     "from modeling.arghandling import Encoding, flatten_args, decode, encode, unflatten_args, EncodedFunction"
