--- a/minimdo/tutorial/Components.ipynb
+++ b/minimdo/tutorial/Components.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "4f70485b-2960-4c2c-a028-630d6885469b",
    "metadata": {
     "execution": {
@@ -24,8 +24,8 @@
    },
    "outputs": [],
    "source": [
-    "from compute import Var\n",
-    "from datastructures.execution import Component"
+    "from modeling.compute import Var\n",
+    "from modeling.gen2.execution import Component"
    ]
   },
   {
@@ -207,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "[DeviceArray(0.78125, dtype=float64)]"
+       "[DeviceArray(0.78125, dtype=float32)]"
       ]
      },
      "execution_count": 7,
@@ -245,9 +245,9 @@
     {
      "data": {
       "text/plain": [
-       "{('R', 'h'): DeviceArray(-0.00390625, dtype=float64),\n",
-       " ('R', 'P_{comms}'): DeviceArray(0.078125, dtype=float64),\n",
-       " ('R', 'D'): DeviceArray(0.15625, dtype=float64)}"
+       "{('R', 'h'): DeviceArray(-0.00390625, dtype=float32),\n",
+       " ('R', 'P_{comms}'): DeviceArray(0.07812501, dtype=float32),\n",
+       " ('R', 'D'): DeviceArray(0.15625, dtype=float32)}"
       ]
      },
      "execution_count": 8,
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "d44315a1-60bc-458f-a29a-901d583d6028",
    "metadata": {
     "execution": {
@@ -285,6 +285,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "# fix numpy seed for reproducibility\n",
+    "np.random.seed(0)\n",
     "A = np.random.rand(10,10)\n",
     "b0 = np.random.rand(10)\n",
     "x0 = np.random.rand(10)\n",
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "a781d566-f41e-4a68-9727-983d06157ec4",
    "metadata": {
     "execution": {
@@ -310,10 +312,10 @@
     {
      "data": {
       "text/plain": [
-       "(4.391333423109129,)"
+       "(14.399744393772462,)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "2f5903f1-7528-4362-ba09-f61875f14ff9",
    "metadata": {
     "execution": {
@@ -341,14 +343,14 @@
      "data": {
       "text/plain": [
        "{('y',\n",
-       "  'x'): DeviceArray([2.18488828, 1.43761381, 2.01779949, 1.61428775, 2.76793662,\n",
-       "              1.87935127, 2.02227283, 0.88950607, 1.8922517 , 2.036412  ],            dtype=float64),\n",
+       "  'x'): DeviceArray([3.005095 , 3.383307 , 3.1705244, 3.0786974, 1.6391404,\n",
+       "              2.260299 , 2.7484593, 2.4617856, 4.085971 , 2.0236309],            dtype=float32),\n",
        " ('y',\n",
-       "  'b'): DeviceArray([1.0146121 , 1.13650587, 0.33435548, 1.81286402, 1.94674412,\n",
-       "              1.05914187, 1.0388783 , 0.71057041, 0.0901676 , 1.00682255],            dtype=float64)}"
+       "  'b'): DeviceArray([2.698821  , 2.8170767 , 1.9712472 , 1.7998033 , 2.137879  ,\n",
+       "              1.732636  , 1.3720064 , 1.8314322 , 2.5308552 , 0.67787457],            dtype=float32)}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "087e4ae1-737d-43bf-9e67-e1699b1e9f62",
    "metadata": {
     "execution": {
@@ -383,11 +385,11 @@
     {
      "data": {
       "text/plain": [
-       "array([2.18488828, 1.43761381, 2.01779949, 1.61428775, 2.76793662,\n",
-       "       1.87935127, 2.02227283, 0.88950607, 1.8922517 , 2.036412  ])"
+       "array([3.00509536, 3.38330726, 3.17052427, 3.07869741, 1.63914044,\n",
+       "       2.26029913, 2.74845931, 2.46178547, 4.0859708 , 2.02363065])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "df14eb33-5f55-484c-baae-403a10fc6635",
    "metadata": {
     "execution": {
@@ -414,11 +416,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.0146121 , 1.13650587, 0.33435548, 1.81286402, 1.94674412,\n",
-       "       1.05914187, 1.0388783 , 0.71057041, 0.0901676 , 1.00682255])"
+       "array([2.69882065, 2.817077  , 1.97124716, 1.79980327, 2.137879  ,\n",
+       "       1.73263593, 1.37200649, 1.83143236, 2.53085497, 0.6778746 ])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,9 +432,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:minimdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-minimdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -444,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
