--- a/minimdo/tutorial/StiffnessSolver.ipynb
+++ b/minimdo/tutorial/StiffnessSolver.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "6ac48354-9e56-4fc6-844f-9752466d5db5",
    "metadata": {
     "execution": {
@@ -25,51 +25,15 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5956049e-713f-4365-bb7a-bce5bda7723c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-10-07T18:46:25.418323Z",
-     "iopub.status.busy": "2022-10-07T18:46:25.418323Z",
-     "iopub.status.idle": "2022-10-07T18:46:27.603083Z",
-     "shell.execute_reply": "2022-10-07T18:46:27.602937Z",
-     "shell.execute_reply.started": "2022-10-07T18:46:25.418323Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from compute import Var\n",
-    "from datastructures.execution import Component"
+    "from scipy.sparse import coo_matrix\n",
+    "import numpy as np\n",
+    "from modeling.compute import Var\n",
+    "from modeling.gen2.execution import Component"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5e3f29e2-422e-4c39-b4ce-194b3b3531c4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-10-07T18:46:27.605009Z",
-     "iopub.status.busy": "2022-10-07T18:46:27.605009Z",
-     "iopub.status.idle": "2022-10-07T18:46:27.613108Z",
-     "shell.execute_reply": "2022-10-07T18:46:27.612605Z",
-     "shell.execute_reply.started": "2022-10-07T18:46:27.605009Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
    "id": "474d1b2f-ae05-459b-9534-da4b48616ba9",
    "metadata": {
     "execution": {
@@ -88,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5ef39338-436e-4256-a824-9b5b9aa6ec75",
    "metadata": {
     "execution": {
@@ -111,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9817ebe8-2d27-4233-89d5-4253bd76f87b",
    "metadata": {
     "execution": {
@@ -131,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "556fbca1-c96e-4550-95e1-f275e829f327",
    "metadata": {
     "execution": {
@@ -151,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "eebc799b-ee02-4b5a-9cd9-f88e462e5cdd",
    "metadata": {
     "execution": {
@@ -170,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "a591f2db-4161-4c02-a669-f53c30314ac4",
    "metadata": {
     "execution": {
@@ -189,7 +153,7 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "4ba3c284-574e-4a94-b8bc-fdbb7966e715",
    "metadata": {
     "execution": {
@@ -228,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "cf2ac450-ecc8-489a-8f28-0bed4ec8c233",
    "metadata": {
     "execution": {
@@ -247,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "cef41bf2-e7b8-419f-bb7d-c7a03bb60326",
    "metadata": {
     "execution": {
@@ -278,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "a6e16420-7872-41d6-a86c-dc722300f1d5",
    "metadata": {
     "execution": {
@@ -292,79 +256,60 @@
    },
    "outputs": [],
    "source": [
-    "#def compute_K_augmented(K_local)\n",
-    "#K_local = K_local.reshape(num_elements, 4, 4)\n",
-    "num_nodes = num_elements + 1\n",
-    "num_entry = num_elements * 12 + 4\n",
-    "ndim = num_entry + 4\n",
+    "def compute_K_augmented(K_local_flat):\n",
+    "    K_local = K_local_flat.reshape(num_elements, 4, 4)\n",
+    "    num_nodes = num_elements + 1\n",
+    "    num_entry = num_elements * 12 + 4\n",
+    "    ndim = num_entry + 4\n",
     "\n",
-    "data = np.zeros((ndim, ))\n",
-    "cols = np.empty((ndim, ))\n",
-    "rows = np.empty((ndim, ))\n",
+    "    data = np.zeros((ndim, ))\n",
+    "    cols = np.empty((ndim, ))\n",
+    "    rows = np.empty((ndim, ))\n",
     "\n",
-    "# First element.\n",
-    "data[:16] = K_local[0,:,:].flat\n",
-    "cols[:16] = np.tile(np.arange(4), 4)\n",
-    "rows[:16] = np.repeat(np.arange(4), 4)\n",
+    "    # First element.\n",
+    "    data[:16] = K_local[0,:,:].flat\n",
+    "    cols[:16] = np.tile(np.arange(4), 4)\n",
+    "    rows[:16] = np.repeat(np.arange(4), 4)\n",
     "\n",
-    "j = 16\n",
-    "for ind in range(1, num_elements):\n",
-    "    ind1 = 2 * ind\n",
-    "    K = K_local[ind, :, :]\n",
+    "    j = 16\n",
+    "    for ind in range(1, num_elements):\n",
+    "        ind1 = 2 * ind\n",
+    "        K = K_local[ind, :, :]\n",
     "\n",
-    "    # NW quadrant gets summed with previous connected element.\n",
-    "    data[j-6:j-4] += K[0, :2]\n",
-    "    data[j-2:j] += K[1, :2]\n",
+    "        # NW quadrant gets summed with previous connected element.\n",
+    "        data[j-6:j-4] += K[0, :2]\n",
+    "        data[j-2:j] += K[1, :2]\n",
     "\n",
-    "    # NE quadrant\n",
-    "    data[j:j+4] = K[:2, 2:].flat\n",
-    "    rows[j:j+4] = np.array([ind1, ind1, ind1 + 1, ind1 + 1])\n",
-    "    cols[j:j+4] = np.array([ind1 + 2, ind1 + 3, ind1 + 2, ind1 + 3])\n",
+    "        # NE quadrant\n",
+    "        data[j:j+4] = K[:2, 2:].flat\n",
+    "        rows[j:j+4] = np.array([ind1, ind1, ind1 + 1, ind1 + 1])\n",
+    "        cols[j:j+4] = np.array([ind1 + 2, ind1 + 3, ind1 + 2, ind1 + 3])\n",
     "\n",
-    "    # SE and SW quadrants together\n",
-    "    data[j+4:j+12] = K[2:, :].flat\n",
-    "    rows[j+4:j+12] = np.repeat(np.arange(ind1 + 2, ind1 + 4), 4)\n",
-    "    cols[j+4:j+12] = np.tile(np.arange(ind1, ind1 + 4), 2)\n",
+    "        # SE and SW quadrants together\n",
+    "        data[j+4:j+12] = K[2:, :].flat\n",
+    "        rows[j+4:j+12] = np.repeat(np.arange(ind1 + 2, ind1 + 4), 4)\n",
+    "        cols[j+4:j+12] = np.tile(np.arange(ind1, ind1 + 4), 2)\n",
     "\n",
-    "    j += 12\n",
+    "        j += 12\n",
     "\n",
-    "data[-4:] = 1.0\n",
-    "rows[-4] = 2 * num_nodes\n",
-    "rows[-3] = 2 * num_nodes + 1\n",
-    "rows[-2] = 0.0\n",
-    "rows[-1] = 1.0\n",
-    "cols[-4] = 0.0\n",
-    "cols[-3] = 1.0\n",
-    "cols[-2] = 2 * num_nodes\n",
-    "cols[-1] = 2 * num_nodes + 1\n",
+    "    data[-4:] = 1.0\n",
+    "    rows[-4] = 2 * num_nodes\n",
+    "    rows[-3] = 2 * num_nodes + 1\n",
+    "    rows[-2] = 0.0\n",
+    "    rows[-1] = 1.0\n",
+    "    cols[-4] = 0.0\n",
+    "    cols[-3] = 1.0\n",
+    "    cols[-2] = 2 * num_nodes\n",
+    "    cols[-1] = 2 * num_nodes + 1\n",
     "\n",
-    "n_K = 2 * num_nodes + 2"
+    "    n_K = 2 * num_nodes + 2\n",
+    "    Ksp = coo_matrix((data, (rows, cols)), shape=(n_K, n_K)).tocsc()\n",
+    "    return Ksp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ba340a94-c3d9-477a-b789-b0a91dd95628",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-10-07T18:52:20.022804Z",
-     "iopub.status.busy": "2022-10-07T18:52:20.022804Z",
-     "iopub.status.idle": "2022-10-07T18:52:20.071211Z",
-     "shell.execute_reply": "2022-10-07T18:52:20.071061Z",
-     "shell.execute_reply.started": "2022-10-07T18:52:20.022804Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.sparse import coo_matrix\n",
-    "from scipy.sparse.linalg import splu\n",
-    "Ksp = coo_matrix((data, (rows, cols)), shape=(n_K, n_K)).tocsc()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "7c3e8d95-b435-4002-a291-02d7c1e085af",
    "metadata": {
     "execution": {
@@ -478,7 +423,7 @@
        "          0.0e+00,  0.0e+00,  0.0e+00,  0.0e+00,  0.0e+00,  0.0e+00]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "e0f0016e-6433-4853-aa67-b213a0022d45",
    "metadata": {
     "execution": {
@@ -500,40 +445,18 @@
      "shell.execute_reply.started": "2022-09-14T18:04:50.389584Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 12000.,    600., -12000.,    600.],\n",
-       "       [   600.,     40.,   -600.,     20.],\n",
-       "       [-12000.,   -600.,  12000.,   -600.],\n",
-       "       [   600.,     20.,   -600.,     40.]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "KLcomp = Component(compute_K_augmented, inputs=('K_local',), outputs=('K_aug',), \n",
     "                   indims=(num_elements*16,), outdims=(num_elements*16,))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdf3ab4a-4e31-4ef8-a642-67111aaf0fce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:minimdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-minimdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -545,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
