--- a/applications/aero/app_miniac copy.ipynb
+++ b/applications/aero/app_miniac copy.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from modeling.compute import Par, Var\n",
-    "from modeling.execution import Component\n",
+    "from modeling.gen2.execution import Component\n",
     "from foundations.functionalsets import FunctionalComp"
    ]
   },
