--- a/minimdo/tests/test_compute.ipynb
+++ b/minimdo/tests/test_compute.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.compute import Var, eqvar\n",
+    "from modeling.compute import Var\n",
+    "from modeling.gen1.compute import eqvar\n",
     "from trash.inputresolver import eqvars, default_out, default_in"
    ]
   },
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "f81ffa07",
    "metadata": {},
    "outputs": [],
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "343669ef",
    "metadata": {},
    "outputs": [],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "475c5edc",
    "metadata": {},
    "outputs": [],
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "3315332b",
    "metadata": {},
    "outputs": [
@@ -143,7 +144,7 @@
        " {0: (y,), 1: (b,), 2: (c,), 3: (a,)})"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "b0d46180",
    "metadata": {},
    "outputs": [],
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "fc888623",
    "metadata": {},
    "outputs": [
@@ -191,7 +192,7 @@
        "tensor([2.0000, 1.5827, 1.3581, 4.0000, 1.1654], dtype=torch.float64)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "2d69a563",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openmdao.api as om\n",
-    "from modeling.compute import buildidpvars, coupled_run\n",
-    "from solver.compute_utils import get_outputs, check_eqs"
+    "from problemgen.gen1.openmdao import buildidpvars, coupled_run\n",
+    "from problemgen.gen1.resultscheck import get_outputs, check_eqs"
    ]
   },
   {
