--- a/minimdo/tests/test_executeformulations.ipynb
+++ b/minimdo/tests/test_executeformulations.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "from utils.executeformulations import generate_x0, perturb_inputs"
+    "from utils.executeformulations import perturb_inputs"
    ]
   },
   {
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "{'x0': 10, 'x1': 2.847017533696122, 'x2': -0.7249377369420862, 'x3': 0}"
+       "{'x0': 10, 'x1': 4.749700534763993, 'x2': -8.67987756747259, 'x3': 0}"
       ]
      },
      "execution_count": 4,
@@ -75,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
