--- a/applications/gen3/mergemodels.ipynb
+++ b/applications/gen3/mergemodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "fa33f852-d0d8-43bc-8c01-8cdd358c181d",
    "metadata": {
     "execution": {
@@ -16,15 +16,13 @@
    },
    "outputs": [],
    "source": [
-    "from modeling.api import Model, adda, addobj, addsolver, merge\n",
-    "from modeling.compute import Var\n",
-    "from modeling.execution import Component, component_hash\n",
-    "from graph.graphutils import copy_dicts"
+    "from modeling.gen3.nesting import Model, adda, addobj, addsolver, merge\n",
+    "from modeling.compute import Var"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "6b549fa3-8f2f-46bb-bfbf-14a40eeaa7ad",
    "metadata": {
     "execution": {
@@ -47,26 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6edea8db-4c2c-4803-81a3-0cb6ea85afd5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-16T22:37:37.708186Z",
-     "iopub.status.busy": "2022-07-16T22:37:37.708186Z",
-     "iopub.status.idle": "2022-07-16T22:37:37.722289Z",
-     "shell.execute_reply": "2022-07-16T22:37:37.722289Z",
-     "shell.execute_reply.started": "2022-07-16T22:37:37.708186Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "addobj(m, x+y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "9381985d-08fe-4baa-a72d-19bc1a1513d7",
    "metadata": {
     "execution": {
@@ -82,13 +61,13 @@
     {
      "data": {
       "text/latex": [
-       "$a=2 \\ (y=1 ,x=1 )$"
+       "$a=2 \\ (x=1 ,y=1 )$"
       ],
       "text/plain": [
        "a"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "56c2e18c-c323-4737-97bb-47e0777f2c29",
    "metadata": {
     "execution": {
@@ -118,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "5f6988b2-81cb-4c20-869c-3ab580a33062",
    "metadata": {
     "execution": {
@@ -137,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "93bf3897-6b5a-47aa-b35e-923273899295",
    "metadata": {
     "execution": {
@@ -156,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "ade325fa-c3a3-40ee-b970-0be866929354",
    "metadata": {
     "execution": {
@@ -172,13 +151,13 @@
     {
      "data": {
       "text/latex": [
-       "$b=1 \\ (y=1 ,x=1 )$"
+       "$b=1 \\ (x=1 ,y=1 )$"
       ],
       "text/plain": [
        "b"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "2bade12a-b912-436e-94f8-487727bb7f2f",
    "metadata": {
     "execution": {
@@ -208,7 +187,7 @@
        "OrderedDict([(0, 1), (1, 1), (2, 2)])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "838e8a01-0a55-49e0-a2cb-abac989efce5",
    "metadata": {
     "execution": {
@@ -231,18 +210,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(({0: ('x',), 1: ('x', 'y')}, {0: (1,), 1: ('a',)}),\n",
+       " (OrderedDict([(0, 1), (1, 1), (2, 2)]), {2: 1}, {}))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#merge(model, edges_new, tree)"
+    "merge((edges,tree), edges_new, tree)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e2db73e-7cda-4722-9f81-56ce8e94a166",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -261,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
