removed unused functions, renamed modules

--- a/applications/gen4/test.ipynb
+++ b/applications/gen4/test.ipynb
@@ -33,9 +33,17 @@
     "x1 = P1.add_equation('x_1', x3**2-a)\n",
     "x2 = P1.add_equation('x_2', x1*x3)\n",
     "P1.add_equation(x3, x1*x2)\n",
-    "P1.variable_order = ['a','x_1','x_2','x_3']\n",
+    "P1.variable_order = ['a','x_1','x_2','x_3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y = np.array([2, -1, -1, 1], dtype=np.float32)\n",
-    "#P1.solve_with_ipopt(y)"
+    "# P1.solve_with_ipopt(y)"
    ]
   },
   {
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
