--- a/minimdo/trash/ds_unit_ex.ipynb
+++ b/minimdo/trash/ds_unit_ex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "046d570a",
    "metadata": {
     "execution": {
@@ -15,12 +15,11 @@
    },
    "outputs": [],
    "source": [
-    "from compute import Evaluable, anp_math, evaluable_with_unit, Var, get_unit, ureg, coupled_run, buildidpvars, eqvar, unit_conversion_factors\n",
-    "from inputresolver import reassigneq, eqvars, eqsonly, default_out, mdf_order, idx_eqlist\n",
-    "from compute_utils import get_outputs, check_eqs\n",
-    "from utils import invmap\n",
+    "from modeling.compute import Var, Par, ureg\n",
+    "from modeling.gen1.compute import Evaluable, evaluable_with_unit, get_unit, eqvar, anp\n",
+    "from trash.inputresolver import eqvars, default_out, default_in, mdf_order, idf_order\n",
+    "# from compute_utils import get_outputs, check_eqs\n",
     "import sympy as sp\n",
-    "import openmdao.api as om\n",
     "import numpy as np"
    ]
   },
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "4a87814f",
    "metadata": {
     "execution": {
@@ -47,7 +46,9 @@
    },
    "outputs": [],
    "source": [
-    "t = Var('t', 10, unit='', never_output=True) \n",
+    "t = Par('t', 10, unit='') \n",
+    "R = Par('R', 10, unit='km')\n",
+    "a = Par('a', 10, unit='km')\n",
     "g, eq2 = eqvar('g', 1/np.pi*sp.acos(R/a))"
    ]
   },
@@ -62,24 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71437a81",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-22T18:22:45.593214Z",
-     "iopub.status.busy": "2021-09-22T18:22:45.593214Z",
-     "iopub.status.idle": "2021-09-22T18:22:45.599219Z",
-     "shell.execute_reply": "2021-09-22T18:22:45.598436Z",
-     "shell.execute_reply.started": "2021-09-22T18:22:45.593214Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from inputresolver import idf_order"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "555299df",
    "metadata": {
     "execution": {
@@ -92,13 +75,13 @@
    },
    "outputs": [],
    "source": [
-    "g = Var('g', 10, unit='m/s**2', never_output=True) \n",
+    "g = Par('g', 10, unit='m/s**2') \n",
     "m = Var('m', 120, unit='kg') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "aeb814f5",
    "metadata": {
     "execution": {
@@ -116,13 +99,13 @@
        "98.10000000000001"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sp.lambdify([m,g], m*g, anp_math)(10, 9.81)"
+    "sp.lambdify([m,g], m*g, anp)(10, 9.81)"
    ]
   },
   {
@@ -169,7 +152,7 @@
    ],
    "source": [
     "print(ev.fx(100, 9.81)) # here we have to re-enter values for all numbers\n",
-    "print(ev.fx(200, partial='never_output')) # it plugs in the values for variables with never_output = True\n",
+    "print(ev.fx(200, partial='always_input')) # it plugs in the values for variables with never_output = True\n",
     "print(ev.fx(partial='varval'))"
    ]
   },
@@ -313,46 +296,14 @@
      "shell.execute_reply.started": "2021-07-21T09:08:55.295563Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(C, E_service/(DOD*N*eta_trans)),\n",
-       " (m_batt, C/mu_batt + m_batt_zero),\n",
-       " (Vol_batt, C/nu_batt)]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eq_list=[eq1, eq2, eq3]\n",
-    "eq_list"
+    "eqs={idx:eq for idx, eq in enumerate([eq1, eq2, eq3])}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "17093d3c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-21T09:08:57.882100Z",
-     "iopub.status.busy": "2021-07-21T09:08:57.882100Z",
-     "iopub.status.idle": "2021-07-21T09:08:57.893667Z",
-     "shell.execute_reply": "2021-07-21T09:08:57.893667Z",
-     "shell.execute_reply.started": "2021-07-21T09:08:57.882100Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "eqs = idx_eqlist(eq_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "8a41005b",
    "metadata": {
     "execution": {
@@ -365,12 +316,12 @@
    },
    "outputs": [],
    "source": [
-    "ins = getdofs(eqs)"
+    "ins = default_in(eqs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7e9d62fb",
    "metadata": {
     "execution": {
@@ -388,7 +339,7 @@
        "{DOD, E_service, N, eta_trans, m_batt_zero, mu_batt, nu_batt}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "84bc7d40",
    "metadata": {
     "execution": {
@@ -417,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "806470ba",
    "metadata": {
     "execution": {
@@ -435,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "90e5f17b",
    "metadata": {
     "execution": {
@@ -453,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "6425ef80",
    "metadata": {
     "execution": {
@@ -468,10 +419,10 @@
     {
      "data": {
       "text/plain": [
-       "[0, 2, 1]"
+       "[0, 1, 2]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +477,7 @@
     {
      "data": {
       "text/plain": [
-       "[0, 2, 1]"
+       "[0, 1, 2]"
       ]
      },
      "execution_count": 20,
@@ -540,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e05e0f39",
    "metadata": {
     "execution": {
@@ -560,7 +511,7 @@
        " 2: (Vol_batt, C/nu_batt)}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,8 +521,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04bedeb8",
+   "metadata": {},
+   "source": [
+    "## Run with openMDAO"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
+   "id": "c0611fad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openmdao.api as om\n",
+    "from problemgen.gen1.openmdao import coupled_run, buildidpvars, get_outputs\n",
+    "from problemgen.gen1.resultscheck import print_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "01f5ab7a",
    "metadata": {
     "execution": {
@@ -594,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "30df82d9",
    "metadata": {
     "execution": {
@@ -613,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "2a30159f",
    "metadata": {
     "execution": {
@@ -628,19 +599,19 @@
     {
      "data": {
       "text/plain": [
-       "{E_service: 20.0,\n",
-       " DOD: 0.4,\n",
-       " Vol_batt: 0.000130718954248366,\n",
-       " m_batt: 6.96078431372549,\n",
-       " eta_trans: 0.85,\n",
-       " C: 0.0588235294117647,\n",
+       "{m_batt_zero: 5.0,\n",
+       " nu_batt: 450.0,\n",
        " N: 1.0,\n",
+       " eta_trans: 0.85,\n",
+       " E_service: 20.0,\n",
+       " Vol_batt: 0.000130718954248366,\n",
        " mu_batt: 30.0,\n",
-       " m_batt_zero: 5.0,\n",
-       " nu_batt: 450.0}"
+       " C: 0.0588235294117647,\n",
+       " DOD: 0.4,\n",
+       " m_batt: 6.96078431372549}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "23fde995",
    "metadata": {
     "execution": {
@@ -676,7 +647,7 @@
        "20.0 <Unit('hour * watt')>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,56 +658,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "1ca286e1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-20T09:49:31.063200Z",
-     "iopub.status.busy": "2021-07-20T09:49:31.063200Z",
-     "iopub.status.idle": "2021-07-20T09:49:31.086178Z",
-     "shell.execute_reply": "2021-07-20T09:49:31.085218Z",
-     "shell.execute_reply.started": "2021-07-20T09:49:31.063200Z"
-    }
-   },
+   "execution_count": 30,
+   "id": "5f1caaf2",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{E_service: '20.00 W * hr',\n",
-       " DOD: '0.40',\n",
-       " Vol_batt: '130718.95 mm ** 3',\n",
-       " m_batt: '6.96 kg',\n",
-       " eta_trans: '0.85',\n",
-       " C: '58.82 W * hr',\n",
+       "{m_batt_zero: '5.00 kg',\n",
+       " nu_batt: '450.00 h * kW / m ** 3',\n",
        " N: '1.00',\n",
-       " mu_batt: '30.00 hr * mW / g',\n",
-       " m_batt_zero: '5.00 kg',\n",
-       " nu_batt: '450.00 hr * kW / m ** 3'}"
+       " eta_trans: '0.85',\n",
+       " E_service: '20.00 W * h',\n",
+       " Vol_batt: '130718.95 mm ** 3',\n",
+       " mu_batt: '30.00 h * mW / g',\n",
+       " C: '58.82 W * h',\n",
+       " DOD: '0.40',\n",
+       " m_batt: '6.96 kg'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{key: '{:.2f~}'.format((val*key.varunit).to_compact()) for key,val in out.items()}"
+    "print_out(out)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8d3c42b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mdo",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "mdo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -748,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
